cmake_minimum_required(VERSION 3.28)
project(cycleConstructions)

set(CMAKE_CXX_STANDARD 17)

#add_executable(cycleConstructions main.cpp)
#add_executable(cycleConstructions forInFor_stars.cpp)
#add_executable(cycleConstructions while.cpp)
#add_executable(cycleConstructions whileExampleGame.cpp)
#add_executable(cycleConstructions doWhile.cpp)
add_executable(cycleConstructions doWhileExample.cpp)